refactor and polish serde package code